# mininet

./: .gitignore  CMakeLists.txt  CMakeListsold.txt  Doxyfile  README.md  make.sh  test.sh
docs/: mainpage.md  network.md  tensor_math.md  timing.md
docs/temp/: mininet playground.drawio
src/: doc.h
src/layer/: layer.cpp  layer.h
src/logs/: CMakeLists.txt  logs.cpp  logs.h
src/math/: CMakeLists.txt  activations.cpp  activations.h  core.cpp  core.h  tensor.cpp  tensor.h  tensor_math.cpp  tensor_math.h
src/network/: CMakeLists.txt  net.cpp  net.h
test/: log_test.cpp  main.cpp  math_test.cpp  tensor_test.cpp
test/speed_test/: speed_test.cpp
test/unit_test/: math_test.cpp  utils_test.cpp
